--- a/index.html
+++ b/index.html
@@ -58,3 +58,26 @@
 
   <div id="remarkList"></div>
 </section>
+<hr />
+<section id="inspectionSection">
+  <h2>점검 입력</h2>
+
+  <div class="grid">
+    <input id="i_crane_no" placeholder="크레인 번호 (예: C-014)" />
+    <select id="i_result">
+      <option value="완료">완료</option>
+      <option value="보류">보류</option>
+      <option value="미완">미완</option>
+    </select>
+    <input id="i_date" type="date" />
+    <input id="i_next" type="date" placeholder="다음 점검일" />
+    <input id="i_comment" placeholder="점검 코멘트" />
+    <button id="saveInspectionBtn">점검 저장</button>
+  </div>
+</section>
+
+<hr />
+<section id="inspectionLogSection">
+  <h2>점검 로그</h2>
+  <div id="inspectionLog"></div>
+</section>
