--- a/index.html
+++ b/index.html
@@ -81,3 +81,7 @@
   <h2>점검 로그</h2>
   <div id="inspectionLog"></div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="app.js"></script>
+</body>
+</html>
