Add reset section with reset button to index.html

--- a/index.html
+++ b/index.html
@@ -85,3 +85,9 @@
 <script src="app.js"></script>
 </body>
 </html>
+<hr />
+<section id="resetSection">
+  <h2>분기 리셋</h2>
+  <button id="resetInspectionBtn">점검 상태 리셋</button>
+  <p style="color:#888;">※ 로그는 삭제되지 않습니다.</p>
+</section>
