--- a/cranes.html
+++ b/cranes.html
@@ -17,3 +17,15 @@
 <script src="app.js"></script>
 </body>
 </html>
+<hr />
+
+<h2>크레인 등록 (관리자)</h2>
+
+<input id="c_no" placeholder="크레인 번호" />
+<input id="c_ton" placeholder="톤수" />
+<input id="c_area" placeholder="지역" />
+<input id="c_location" placeholder="위치" />
+<input id="c_type" placeholder="타입" />
+<input id="c_brand" placeholder="브랜드" />
+
+<button onclick="addCrane()">크레인 등록</button>
