--- a/remarks.html
+++ b/remarks.html
@@ -2,20 +2,34 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>비고 리스트</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<h1>비고 리스트</h1>
+<header class="topbar">
+  <div class="title">비고 리스트</div>
+</header>
 
-<select id="filterStatus">
-  <option value="all">전체</option>
-  <option value="open">미해결</option>
-  <option value="resolved">해결</option>
-</select>
-<button onclick="applyRemarkFilter()">필터</button>
+<main class="container">
+  <section class="card">
+    <h2>필터</h2>
+    <div class="btn-row">
+      <select id="filterRemarkStatus" class="input">
+        <option value="all">전체</option>
+        <option value="open">미해결</option>
+        <option value="resolved">해결</option>
+      </select>
+      <button class="btn" onclick="applyRemarkFilter()">적용</button>
+    </div>
+  </section>
 
-<div id="remarkList"></div>
+  <section class="card">
+    <h2>목록</h2>
+    <div id="remarkList" class="list"></div>
+  </section>
+</main>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script src="app.js"></script>
