--- a/hold.html
+++ b/hold.html
@@ -2,13 +2,22 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>보류 리스트</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<h1>보류 리스트</h1>
+<header class="topbar">
+  <div class="title">보류 리스트</div>
+</header>
 
-<div id="holdList"></div>
+<main class="container">
+  <section class="card">
+    <h2>목록</h2>
+    <div id="holdList" class="list"></div>
+  </section>
+</main>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script src="app.js"></script>
