--- a/cranes.html
+++ b/cranes.html
@@ -109,3 +109,5 @@
 
 </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="app.js" type="module"></script>
