--- a/cranes.html
+++ b/cranes.html
@@ -75,6 +75,13 @@
 <button onclick="loadCranes()">필터 적용</button>
 
 <hr />
+<input id="c_no" placeholder="크레인 번호" />
+<input id="c_area" placeholder="지역" />
+<input id="c_type" placeholder="크레인 타입" />
+<input id="c_hoist" placeholder="호이스트 타입" />
+<input id="c_brand" placeholder="브랜드" />
+<input id="c_ton" placeholder="톤수" />
+<input id="c_group" placeholder="그룹" />
 
 <!-- 크레인 등록 -->
 <h3>크레인 등록</h3>
