--- a/cranes.html
+++ b/cranes.html
@@ -133,6 +133,7 @@
       <th>타입</th>
       <th>브랜드</th>
       <th>톤수</th>
+      <th>호이스트정보</th>
       <th>그룹</th>
       <th>상태</th>
       <th>보류</th>
