--- a/cranes.html
+++ b/cranes.html
@@ -80,9 +80,14 @@
 <h3>크레인 등록</h3>
 <div class="add-box">
 
-  <input id="c_no" placeholder="크레인 번호" />
+  <input id="c_no" placeholder="크레인 번호 (숫자)" oninput="autoCraneNoPrefix()" />
 
-  <input id="c_area" placeholder="지역" />
+  <select id="c_area">
+  <option value="">지역</option>
+  <option value="A">A</option>
+  <option value="B">B</option>
+</select>
+
 
   <!-- 크레인 타입 (영문 고정) -->
   <select id="c_type">
