--- a/cranes.html
+++ b/cranes.html
@@ -80,7 +80,7 @@
 <h3>크레인 등록</h3>
 <div class="add-box">
 
-  <input id="c_no" placeholder="크레인 번호 (숫자)" oninput="autoCraneNoPrefix()" />
+ <input id="c_no" placeholder="크레인 번호 (숫자)" onblur="autoCraneNoPrefix()" />
 
   <select id="c_area">
   <option value="">지역</option>
