--- a/cranes.html
+++ b/cranes.html
@@ -105,7 +105,7 @@
   <input id="c_no" placeholder="숫자만 입력 가능 (예: 203)" onblur="autoCraneNoPrefix()" />
 
   <!-- 지역(원하면 나중에 A/B만으로 고정 가능) -->
-  <input id="c_area" placeholder="지역" />
+  <input id="c_area" placeholder="select(A/B)" />
 
   <!-- ✅ 타입 선택 -->
   <select id="c_type">
