--- a/cranes.html
+++ b/cranes.html
@@ -61,7 +61,7 @@
   </select>
 
   <input id="f_no" placeholder="크레인 번호(검색)" />
-  <input id="f_area" placeholder="지역" />
+  <input id="f_area" placeholder="select(A/B)" />
 
   <!-- ✅ 타입: 선택형 -->
   <select id="f_type">
