--- a/cranes.html
+++ b/cranes.html
@@ -2,35 +2,45 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HCMS | 크레인 리스트</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="app.js"></script>
 
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      font-size: 17px;
+      padding: 24px;
+      font-size: 18px;
     }
 
-    h1 { margin-bottom: 20px; }
+    h1 { margin-bottom: 18px; }
 
     .filter-box, .add-box {
       display: grid;
-      grid-template-columns: repeat(7, 1fr);
+      grid-template-columns: repeat(6, 1fr);
       gap: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
 
+    .add-box { grid-template-columns: repeat(6, 1fr); }
+
     input, select, button {
-      height: 52px;
-      font-size: 17px;
-      padding: 0 10px;
+      height: 56px;
+      font-size: 18px;
+      padding: 0 12px;
+      box-sizing: border-box;
     }
 
     button {
       cursor: pointer;
       font-weight: bold;
+      white-space: nowrap;
+    }
+
+    .row {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin: 10px 0 18px;
     }
 
     table {
@@ -42,127 +52,192 @@
       border: 1px solid #ccc;
       padding: 12px;
       text-align: center;
+      vertical-align: middle;
     }
 
-    tr { height: 48px; }
-    th { background: #f4f4f4; }
+    tr { height: 52px; }
+
+    th {
+      background: #f4f4f4;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+
+    .btn-mini {
+      height: 44px;
+      font-size: 16px;
+      padding: 0 10px;
+      margin: 2px 2px;
+    }
+
+    .muted {
+      color: #777;
+      font-size: 15px;
+      margin-top: 4px;
+    }
   </style>
 </head>
+
 <body>
+  <h1>크레인 리스트</h1>
 
-<h1>크레인 리스트</h1>
+  <!-- 필터 -->
+  <div class="filter-box">
+    <input id="f_no" placeholder="크레인 번호 (예: C-014)" />
 
-<!-- ✅ 필터 -->
-<div class="filter-box">
-  <select id="f_no_mode">
-    <option value="">번호 전체</option>
-    <option value="HAS">번호 있음</option>
-    <option value="NONE">번호 없음</option>
-  </select>
+    <!-- ✅ A/B 선택 복구 -->
+    <select id="f_area">
+      <option value="">지역 전체</option>
+      <option value="A">A</option>
+      <option value="B">B</option>
+    </select>
 
-  <input id="f_no" placeholder="크레인 번호(검색)" />
-  <input id="f_area" placeholder="select(A/B)" />
+    <!-- ✅ 타입 선택식(필터) -->
+    <select id="f_type">
+      <option value="">타입 전체</option>
+      <option value="EOT">EOT</option>
+      <option value="Suspension">Suspension</option>
+      <option value="Gantry">Gantry</option>
+      <option value="Post">Post</option>
+      <option value="Wall">Wall</option>
+      <option value="Monorail">Monorail</option>
+      <option value="Service Crane">Service Crane</option>
+    </select>
 
-  <!-- ✅ 타입: 선택형 -->
-  <select id="f_type">
-    <option value="">타입 전체</option>
-    <option value="EOT">EOT</option>
-    <option value="Suspension">Suspension</option>
-    <option value="Gantry">Gantry</option>
-    <option value="Post">Post</option>
-    <option value="Wall">Wall</option>
-    <option value="Monorail">Monorail</option>
-    <option value="Service">Service</option>
-  </select>
+    <input id="f_brand" placeholder="브랜드" />
+    <input id="f_ton" placeholder="톤수" />
 
-  <input id="f_brand" placeholder="브랜드" />
-  <input id="f_ton" placeholder="톤수" />
+    <select id="f_status">
+      <option value="">상태 전체</option>
+      <option value="완료">완료</option>
+      <option value="보류">보류</option>
+      <option value="미완">미완</option>
+      <option value="미점검">미점검</option>
+    </select>
+  </div>
 
-  <select id="f_status">
-    <option value="">상태 전체</option>
-    <option value="완료">완료</option>
-    <option value="미완">미완</option>
-    <option value="보류">보류</option>
-    <option value="미점검">미점검</option>
-  </select>
-</div>
+  <div class="row">
+    <button onclick="loadCranes()">필터 적용</button>
+  </div>
 
-<button onclick="loadCranes()">필터 적용</button>
+  <hr />
 
-<hr />
+  <!-- 크레인 등록 -->
+  <h3>크레인 등록</h3>
 
-<!-- ✅ 크레인 등록 -->
-<h3>크레인 등록</h3>
+  <!-- ✅ 번호입력/번호없음 선택 -->
+  <div class="row">
+    <select id="c_no_mode" onchange="setNoMode()" style="min-width: 200px;">
+      <option value="input">번호입력</option>
+      <option value="none">번호없음</option>
+    </select>
 
-<div class="add-box">
-  <!-- ✅ 번호모드 -->
-  <select id="c_no_mode" onchange="toggleCraneNoMode()">
-    <option value="INPUT">번호 입력</option>
-    <option value="NONE">번호 없음</option>
-  </select>
+    <div class="muted">번호입력: 숫자만 치면 C- 자동 / 번호없음: 자동으로 “번호없음” 저장</div>
+  </div>
 
-  <!-- 번호 입력 -->
-  <input id="c_no" placeholder="숫자만 입력 가능 (예: 203)" onblur="autoCraneNoPrefix()" />
+  <div class="add-box">
+    <!-- 번호 -->
+    <input id="c_no" placeholder="크레인 번호 (숫자만 입력 가능)" onblur="autoCraneNoPrefix()" />
 
-  <!-- 지역(원하면 나중에 A/B만으로 고정 가능) -->
-  <input id="c_area" placeholder="select(A/B)" />
+    <!-- ✅ A/B 선택 복구 -->
+    <select id="c_area">
+      <option value="">지역 선택</option>
+      <option value="A">A</option>
+      <option value="B">B</option>
+    </select>
 
-  <!-- ✅ 타입 선택 -->
-  <select id="c_type">
-    <option value="">타입 선택</option>
-    <option value="EOT">EOT</option>
-    <option value="Suspension">Suspension</option>
-    <option value="Gantry">Gantry</option>
-    <option value="Post">Post</option>
-    <option value="Wall">Wall</option>
-    <option value="Monorail">Monorail</option>
-    <option value="Service">Service</option>
-  </select>
+    <!-- ✅ 타입 선택식(등록) -->
+    <select id="c_type">
+      <option value="">크레인 타입 선택</option>
+      <option value="EOT">EOT</option>
+      <option value="Suspension">Suspension</option>
+      <option value="Gantry">Gantry</option>
+      <option value="Post">Post</option>
+      <option value="Wall">Wall</option>
+      <option value="Monorail">Monorail</option>
+      <option value="Service Crane">Service Crane</option>
+    </select>
 
-  <!-- 호이스트 -->
-  <select id="c_hoist_type" onchange="toggleHoistDetail()">
-    <option value="">호이스트 타입</option>
-    <option value="Wire">Wire</option>
-    <option value="Chain">Chain</option>
-  </select>
+    <input id="c_brand" placeholder="브랜드" />
+    <input id="c_ton" placeholder="톤수" />
+    <input id="c_group" placeholder="그룹" />
+  </div>
 
-  <input id="c_brand" placeholder="브랜드" />
-  <input id="c_ton" placeholder="톤수" />
-  <input id="c_group" placeholder="그룹" />
+  <!-- 호이스트 (상세) -->
+  <div class="add-box" style="grid-template-columns: repeat(6, 1fr);">
+    <select id="c_hoist_type" onchange="toggleHoistDetail()">
+      <option value="">호이스트 타입</option>
+      <option value="Wire">Wire</option>
+      <option value="Chain">Chain</option>
+    </select>
 
-  <!-- Wire일 때만 사용 -->
-  <input id="c_wire_dia" placeholder="와이어 Φ (숫자만)" style="display:none;" />
-  <input id="c_wire_len" placeholder="와이어 길이 M (숫자만)" style="display:none;" />
+    <input id="c_wire_dia" placeholder="와이어 Φ (숫자만)" style="display:none;" />
+    <input id="c_wire_len" placeholder="와이어 길이 M (숫자만)" style="display:none;" />
 
-  <!-- Wire/Chain 공통 -->
-  <select id="c_reeving" style="display:none;">
-    <option value="">싱글/더블</option>
-    <option value="Single">Single</option>
-    <option value="Double">Double</option>
-  </select>
-</div>
+    <select id="c_reeving" style="display:none;">
+      <option value="">싱글/더블</option>
+      <option value="Single">Single</option>
+      <option value="Double">Double</option>
+    </select>
 
-<button onclick="addCrane()">크레인 등록</button>
+    <div></div><div></div><div></div>
+  </div>
 
-<hr />
+  <div class="row">
+    <button onclick="addCrane()">크레인 등록/수정 저장</button>
+  </div>
 
-<!-- ✅ 리스트 -->
-<table>
-  <thead>
-    <tr>
-      <th>번호</th>
-      <th>지역</th>
-      <th>타입</th>
-      <th>브랜드</th>
-      <th>톤수</th>
-      <th>호이스트</th>
-      <th>그룹</th>
-      <th>상태</th>
-      <th>관리</th>
-    </tr>
-  </thead>
-  <tbody id="craneList"></tbody>
-</table>
+  <hr />
 
+  <!-- 리스트 -->
+  <table>
+    <thead>
+      <tr>
+        <th>번호</th>
+        <th>지역</th>
+        <th>타입</th>
+        <th>브랜드</th>
+        <th>톤수</th>
+
+        <!-- ✅ 톤수 다음에 호이스트 칸 고정 -->
+        <th>호이스트</th>
+
+        <th>그룹</th>
+        <th>상태</th>
+        <th>관리</th>
+      </tr>
+    </thead>
+    <tbody id="craneList"></tbody>
+  </table>
+
+  <!-- ✅ 중복 로딩 금지: 딱 1번만 -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="app.js"></script>
+
+  <!-- cranes.html 전용 보조 스크립트 (app.js 건드리지 않음) -->
+  <script>
+    function setNoMode() {
+      const mode = document.getElementById("c_no_mode")?.value;
+      const no = document.getElementById("c_no");
+
+      if (!no) return;
+
+      if (mode === "none") {
+        no.value = "번호없음";
+        no.readOnly = true;
+        no.style.background = "#f4f4f4";
+      } else {
+        if (no.value === "번호없음") no.value = "";
+        no.readOnly = false;
+        no.style.background = "";
+      }
+    }
+
+    // 페이지 진입 시 기본 모드 적용
+    document.addEventListener("DOMContentLoaded", () => {
+      setNoMode();
+    });
+  </script>
 </body>
 </html>
