--- a/cranes.html
+++ b/cranes.html
@@ -84,6 +84,12 @@
 
   <!-- 필터 -->
   <div class="filter-box">
+    <select id="f_no_mode" onchange="applyNoModeFilterUI()">
+      <option value="">번호구분 전체</option>
+      <option value="input">번호입력</option>
+      <option value="none">번호없음</option>
+    </select>
+
     <input id="f_no" placeholder="크레인 번호 (예: C-014)" />
 
     <!-- ✅ A/B 선택 복구 -->
