--- a/holds.html
+++ b/holds.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <link rel="stylesheet" href="assets/hcms.css">
 <head>
   <meta charset="UTF-8" />
   <title>HCMS | 보류 리스트</title>
