--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <link rel="stylesheet" href="assets/hcms.css">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HCMS</title>
+
+  <!-- 공용 CSS -->
+  <link rel="stylesheet" href="assets/hcms.css">
 
   <style>
     body {
@@ -14,53 +16,65 @@
       color: #fff;
     }
 
+    /* ===== TOPBAR ===== */
     .topbar {
       background: #ff8a00;
-      padding: 20px;
-      font-size: 28px;
-      font-weight: bold;
+      padding: 14px 24px;
+      display: grid;
+      grid-template-columns: auto 1fr auto;
+      align-items: center;
+    }
+
+    .topbar img {
+      height: 48px;
+    }
+
+    .topbar .title {
       text-align: center;
+      font-size: 32px;
+      font-weight: bold;
       color: #000;
     }
 
+    /* ===== MAIN ===== */
     .container {
-      max-width: 1200px;
+      max-width: 1600px; /* 🔥 메인 사이즈 확대 */
       margin: auto;
-      padding: 24px;
+      padding: 32px;
     }
 
     .card {
       background: #1a1a22;
-      border-radius: 14px;
-      padding: 24px;
-      margin-bottom: 24px;
+      border-radius: 16px;
+      padding: 28px;
+      margin-bottom: 28px;
     }
 
     h2 {
       margin-top: 0;
-      margin-bottom: 20px;
-      font-size: 26px;
+      margin-bottom: 24px;
+      font-size: 28px;
     }
 
     /* ===== 대시보드 ===== */
     .dash {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 20px;
+      gap: 24px;
     }
 
     .dash-item {
       background: #111;
-      border-radius: 12px;
-      padding: 20px;
+      border-radius: 14px;
+      padding: 24px;
       text-align: center;
-      font-size: 20px;
+      font-size: 22px;
     }
 
     .dash-item span {
       display: block;
-      margin-top: 10px;
-      font-size: 40px;
+      margin-top: 12px;
+      font-size: 44px;
       font-weight: bold;
       color: #ff8a00;
     }
@@ -68,10 +82,10 @@
     /* ===== 입력 폼 ===== */
     .form-grid {
       display: grid;
-      grid-template-columns: 160px 1fr;
-      gap: 18px 16px;
+      grid-template-columns: 180px 1fr;
+      gap: 20px 18px;
       align-items: center;
-      margin-bottom: 24px;
+      margin-bottom: 28px;
     }
 
     label {
@@ -79,26 +93,26 @@
     }
 
     .input {
-      height: 56px;
+      height: 60px;
       font-size: 20px;
-      padding: 0 14px;
-      border-radius: 8px;
+      padding: 0 16px;
+      border-radius: 10px;
       border: none;
     }
 
     /* ===== 버튼 ===== */
     .btn-row {
       display: flex;
-      gap: 20px;
+      gap: 24px;
       flex-wrap: wrap;
     }
 
     .btn {
-      height: 64px;
-      padding: 0 32px;
+      height: 68px;
+      padding: 0 36px;
       font-size: 22px;
       font-weight: bold;
-      border-radius: 10px;
+      border-radius: 12px;
       border: none;
       cursor: pointer;
       background: #ff8a00;
@@ -120,8 +134,13 @@
         grid-template-columns: 1fr;
       }
 
-      label {
-        margin-top: 10px;
+      .topbar {
+        grid-template-columns: 1fr;
+        gap: 10px;
+      }
+
+      .topbar .title {
+        order: -1;
       }
     }
   </style>
@@ -130,7 +149,14 @@
 <body>
 
 <header class="topbar">
-  HCMS
+  <!-- 좌측 로고 -->
+  <img src="assets/logo_hope.png" alt="희망이엔지">
+
+  <!-- 중앙 타이틀 -->
+  <div class="title">HCMS</div>
+
+  <!-- 우측 로고 -->
+  <img src="assets/logo_hanwha.png" alt="한화에너지">
 </header>
 
 <main class="container">
