--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     /* ===== MAIN ===== */
     .container {
-      max-width: 1600px; /* 🔥 메인 사이즈 확대 */
+      max-width: 1600px;
       margin: auto;
       padding: 32px;
     }
@@ -150,13 +150,13 @@
 
 <header class="topbar">
   <!-- 좌측 로고 -->
-  <img src="assets/logo_hope.png" alt="희망이엔지">
+  <img src="assets/hope.png" alt="희망이엔지">
 
   <!-- 중앙 타이틀 -->
   <div class="title">HCMS</div>
 
   <!-- 우측 로고 -->
-  <img src="assets/logo_hanwha.png" alt="한화에너지">
+  <img src="assets/hanwha.png" alt="한화에너지">
 </header>
 
 <main class="container">
@@ -213,9 +213,7 @@
 
 </main>
 
-<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<!-- App -->
 <script src="app.js"></script>
 
 </body>
