--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <header class="topbar">
   <!-- 좌측 로고 -->
   <div class="logo-box">
-    <img src="assets/logo_hope.png" alt="희망이엔지">
+    <img src="assets/hope.png" alt="희망이엔지">
   </div>
 
   <!-- 중앙 타이틀 -->
@@ -179,7 +179,7 @@
 
   <!-- 우측 로고 -->
   <div class="logo-box">
-    <img src="assets/logo_hanwha.png" alt="한화에너지">
+    <img src="assets/hanwha.png" alt="한화에너지">
   </div>
 </header>
 
